# RedInk

./: CLAUDE.md  INTEGRATION_GUIDE.md  mcp_config.yaml  pyproject.toml
backend/: app.py  config.py  socket_manager.py  task_manager.py
backend/account_utils/: __init__.py  auth.py  config.py  login.py
backend/agents/: __init__.py  base.py  callbacks.py  creative.py
backend/generators/: image_api.py
backend/mcp/: __init__.py  client.py  langchain.py  registry.py
backend/prompts/: publish_content_prompt.txt
backend/routes/: __init__.py  account_routes.py  agent_routes.py  config_routes.py  outline_routes.py  publish_routes.py
backend/services/: history.py  outline.py  xhs_publisher.py
backend/tools/: __init__.py
backend/tools/internal/: __init__.py  image_tool.py  outline_tool.py
backend/tools/mcp/: __init__.py
backend/utils/: error_handler.py  thread_pool.py
cookiesFile/: 2ce004e2-f6ca-11f0-86da-a0b3393688ae.json
db/: accounts.db
frontend/: package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.vue
frontend/src/api/: account.ts  agent.ts  index.ts  publish.ts
frontend/src/components/agent/: AgentMonitor.vue  MessageItem.vue
frontend/src/components/history/: GalleryCard.vue  (+1 more)
frontend/src/composables/: useCreationState.ts  useProviderForm.ts  useSocket.ts  useSocketReconnect.ts
frontend/src/router/: index.ts
frontend/src/stores/: account.ts  generator.ts
frontend/src/utils/: performance.ts
frontend/src/views/: AccountManagementView.vue  CreationCenterView.vue  HistoryView.vue  HomeView.vue  PublishView.vue  SettingsView.vue
(+1 files in other folders)
